--- a/serverL/package.json
+++ b/serverL/package.json
@@ -19,11 +19,16 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
+    "puppeteer": "^22.10.0"
   }
 }
